--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const today = new Date();
 ---
 
-<footer>
+<footer class="sticky bottom-0 -z-20 h-36 flex items-center justify-center">
 	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
 </footer>
 <style>
