--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,6 +57,26 @@ pre {
 pre > code {
 	all: unset;
 }
+kbd {
+  background-color: #444;
+  border-top: 3px solid #aaa;
+  border-left: 3px solid #999;
+  border-right: 3px solid #333;
+  border-bottom: 4px solid #222;
+  border-radius: 4px;
+  color: whitesmoke;
+  display: inline-block;
+  font-size: .8rem;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+  line-height: 100%;
+  margin: 0 .1em;
+  padding: .2em 0.5em;
+  text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+}
 blockquote {
 	@apply border-l-8 border-lime-500 italic ml-8 pl-4;
 	color: var(--text-secondary);
@@ -231,3 +251,5 @@ html {
 		transition: none !important;
 	}
 }
+
+
