--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
-  --background-body: #fff;
+  --background-body: #f5f4fa;
 	--background-box: #ddd6;
-  --text-main: #36393b;
+  --text-main: #26292b;
   --text-secondary: #6b6f72;
   --primary-color: #529c77;  
   --secondary-color: #6fa5b0;
