--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import BottonThemeToggle from '@components/ButtonThemeToggle';
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blog">Blog</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
-		<BottonThemeToggle client:load/>
+		<BottonThemeToggle client:only="react"/>
 	</nav>
 </div>
 </header>
